@@ -28,6 +28,7 @@ Other new features:
   o New --output option to write to multiple files in one run.
     Only useful with certain effects like trim and silence. (cbagwell)
   o Display SoX build environment information with -V -V.  (robs)
+  o Add minimum-phase option to `rate' effect.  (robs)
 
 Other bug fixes:
 
